# dotlab

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  install.sh
src/: cli.rs  doctor.rs  main.rs  manifest.rs  metal.rs  packages.rs  paths.rs  profile.rs  util.rs
tests/: archive-smoke.sh  integration.rs
